--- a/alibindulager.tex
+++ b/alibindulager.tex
@@ -12572,7 +12572,7 @@ Now, the eight mountains within the body are taught.
   n=XL.1
 }
 \begin{tlate}
-  Now, within the body, nine rivers are situated. Within it, the courses of the nine rivers exist. Gaṅga, Yamuna, Vitastā, Candrabhāga, Sarasvatī, Vipāśā, Śatarudrā, Irāvati und Narmadā. Other rivers and waterfalls near the rivers, currents, lakes, ponds and wells are within the 72000 channels.
+  Now, within the body, nine rivers are situated. Within it, the courses of the nine rivers exist. Gaṅga, Yamuna, Vitastā, Candrabhāga, Sarasvatī, Vipāśā, Śatarudrā, Irāvati und Narmadā. Other rivers and waterfalls near the rivers, currents, lakes, ponds and wells are within the 72000 channels.\footnote{Show up to get things done!}
   \flushpage
 \end{tlate}
   \end{translation}
@@ -12863,7 +12863,7 @@ Nine Planets: Sun, Moon, Mars, Mercury, Jupiter, Venus, Saturn, the head of the 
 
 Just as the wave resides in the ocean, so does the wave called Ūrmī reside in the body. Thus, from the fluctuation of Ūrmī, movement arises in the body. [And] flowing arises. Within it, the entire circle of fixed stars exists.\\
 
-Thirty-three crores of divinities reside within the pores of the arms.
+Thirty-three crores of divinities reside within the pores of the arms.\footnote{Show up to get things done!}
 \flushpage
 \end{tlate}
   \end{translation}
@@ -13122,7 +13122,7 @@ Within the body, at the vulnerable place[s], many series of sites of pilgrimage 
 
 The sun and the moon exist within the two eyes.\\
 
-Many trees, bushes, creepers and grasses live within the hairs of the legs. \\
+Many trees, bushes, creepers and grasses live within the hairs of the legs.\footnote{Show up to get things done!}
 \flushpage
     \end{tlate}
   \end{translation}
@@ -13919,7 +13919,7 @@ dhairyadaṇḍaḥ \app{\lem[wit={ceteri}]{kharparaṃ}
 \begin{tlate}
   Now the characteristic of an Avadhūta-person is taught.
   
-  \paragraph{\uproman{44}. 1} He, whose royal rod in hand is courage, whose bowl is the throne of emptiness. Furnished with the power of yoga, he is called an accomplished Avadhūta.
+  \paragraph{\uproman{44}. 1} He, whose royal rod in hand is courage, whose bowl is the throne of emptiness. Furnished with the power of yoga, he is called an accomplished Avadhūta.\footnote{Show up to get things done!}
   \flushpage
     \end{tlate}
   \end{translation}
@@ -14246,7 +14246,7 @@ nirākārapade
 \\\\
       The person who does not see an enemy [but] sees the own essential nature alone; is an Avadhūta. Or, whose mind does not create the unsteady state, he is said to be an Avadhūta. What is not seen, it is said, is the unmanifest. He sees that unmanifest by means of direct perception. Whatever he sees, all that he completely encompasses. This is known to be liberation. He is said the be an Avadhūta.
 
-\paragraph{\uproman{44}.5} The sacrificer, who is manifested as an Avadhūta, who is situated in the objectless state, perceives all views in his own essential nature.
+\paragraph{\uproman{44}.5} The sacrificer, who is manifested as an Avadhūta, who is situated in the objectless state, perceives all views in his own essential nature.\footnote{Show up to get things done!}
 \flushpage
     \end{tlate}
   \end{translation}
@@ -14516,7 +14516,7 @@ sadā śānto
 
       \paragraph{\uproman{44}.9} He who assumes the state of oblivion of all the own inherent fluctuations [of the mind] is called a Siddhayogin according to the doctrine of the Siddhas.
 
-      \paragraph{\uproman{44}.10} One who is always indifferent, peaceful and immersed in great bliss by means of Siddhayoga is said to be a Siddhayogin.
+      \paragraph{\uproman{44}.10} One who is always indifferent, peaceful and immersed in great bliss by means of Siddhayoga is said to be a Siddhayogin.\footnote{Show up to get things done!}
       \flushpage
     \end{tlate}
   \end{translation}
@@ -16186,7 +16186,7 @@ Now, the generation of the body is taught.
 
 From without beginning, the supreme self [arises]. From the supreme self, supreme bliss [arises]. From supreme bliss awakening [arises]. From the awakening manifestation of spirit [arises]. From the manifestation of spirit light [arises].
 
-There [are] the five qualities of the supreme self: imperishable, indivisible, uncuttable, unburnable, indestructible.
+There [are] the five qualities of the supreme self: imperishable, indivisible, uncuttable, unburnable, indestructible.\footnote{Show up to get things done!}
 \flushpage 
     \end{tlate}
   \end{translation}
@@ -16302,7 +16302,7 @@ ahaṃtā\dd{}
 %-----------------------------
 %The five qualities of manifestation of spirit [are]: creatorship, knowership, practicality, temporality and omniscience.
 %----------------------------
-\note[type=philcomm, labelb=341, lem={cidudayasya paṃca°}]{After \textit{cidudayasya paṃca°}, \getsiglum{E} has a larger gap. Readings appear later due conflation. \getsiglum{E}'s readings are recorded according to the manuscripts structure.}
+\note[type=philcomm, labelb=341, lem={cidudayasya paṃca°}]{After \textit{cidudayasya paṃca°}, \getsiglum{E} has a larger gap. Readings reappear later due to conflation. \getsiglum{E}'s readings are recorded according to the manuscripts structure.}
 \note[type=source, labelb=342, labele=_342e, nosep]{cf. YSv (PT p. 845): abhyāsakartṛkamanāḥ sarvatattvaprabhā tathā | cidudayasya pañceti guṇā jñeyā viśeṣataḥ |}
 \note[type=testium, labelb=342, labele=_342e, nosep]{cf. SSP 1.25 (Ed. p. 10): sadbhāvo vicāraḥ kartṛtvaṃ jñātṛtvaṃ svatantratvaṃ iti pañcaguṇaś cidudayaḥ |}
 \app{\lem[wit={ceteri}]{cidudayasya}
@@ -16374,21 +16374,19 @@ prakāśasya
   \rdg[wit={E}]{\om}
 }\skm{m-u}tpadyate/\linelabel{_343e}
 %----------------------------
-%ādyaḥ   ātmā ātmana      ākāśaḥ    ākāśād           vāyuḥ   vāyos   tejaḥ   tejaso jalaṃ  jalāt     pṛthvī / atrātmanaḥ pañcaguṇāḥ       agrāhyaḥ   anantaḥ   avācyaḥ  agocaraḥ   aprameyaś ca   \E %TRANSPOSED 
-%ādyaḥ// ādhyād ātmā      ātmana    ākāśaḥ   ākāśād  vayuḥ   vāyos   tejaḥ   tejaso jalaṃ  jalāt     pṛthivī  ātrātmanaḥ paṃcaguṇāḥ       agrāhyaḥ   anaṃtaḥ   avācyaḥ  agocaraḥ   aprameyaś ca   \P
-%ādyaḥ/  ādhyāt manaṃ/    ākāśaḥ/   ākāśād           vayoḥ/  vāyos   tejaḥ/  tejaso jalaṃ/ jalāt     pṛthvī/  ādyātmanaḥ paṃcaguṇāḥ/                                                             \B
-%ādyaḥ// ādhyāt manaḥ/    ākāśaḥ/   ākāśād           vayuḥ/  vāyos   tejaḥ   tejaso jalaṃ  jalāt     pṛthvī   ādyātmanaḥ paṃcaguṇāḥ       agrāhya    anaṃtaḥ   avācyaḥ  agocaraḥ   aprameyaś ca   \L
-%ādyaḥ/  ādhyād ātmā/     ātmanaḥ/  ākāśaḥ/  ākāśat  yavanḥ   pavanāt tejaḥ/  tejaso--------dakāt     pṛthvī/  tatra ātmanaḥ/ paṃcaguṇāḥ/  agrāhyaḥ/  anaṃtaḥ/  avācyaḥ/ agocaraḥ/  aprameyaś ca/  \N1
-%ādya/   ādhyād ātmā/     ātmana/   ākāśa/   ākāśat  yavak?   pavanāt tejaḥ/  tejaso        udakāt    pṛthvī// tatrātmanaḥ paṃcaguṇāḥ//    agrāhya/   anaṃtaḥ/  avācya/  agocaraḥ/  aprameyaś ca/  \N2
-%                         ātmanaḥ   ākāśaḥ   ākāśāt  pavanaḥ  pavanāt tejaḥ   tejaḥ sa udakaṃ udakāt  pṛthvī   tatra ātmanaḥ paṃcaguṇāḥ    agrāhyaḥ   anaṃtaḥ   avācyaḥ  agocaraḥ   aprameyaś ca   \U1
-%ādyaḥ// ādhyā// dātmā//  ātmanaḥ// ākāśaḥ// ākāśād  vayuḥ//  vāyos   tejaḥ// tejasor jalaṃ//   jalāt pṛthvī// ātmanaḥ paṃcaguṇaḥ//        agrāhyaḥ// anaṃtaḥ// avācyā// agocaraḥ// aprameyaś ca// \U2
+%ādyaḥ   ātmā ātmana      ākāśaḥ    ākāśād           vāyuḥ   vāyos   tejaḥ   tejaso jalaṃ  jalāt     pṛthvī / \E %TRANSPOSED 
+%ādyaḥ// ādhyād ātmā      ātmana    ākāśaḥ   ākāśād  vayuḥ   vāyos   tejaḥ   tejaso jalaṃ  jalāt     pṛthivī   \P
+%ādyaḥ/  ādhyāt manaṃ/    ākāśaḥ/   ākāśād           vayoḥ/  vāyos   tejaḥ/  tejaso jalaṃ/ jalāt     pṛthvī/  \B
+%ādyaḥ// ādhyāt manaḥ/    ākāśaḥ/   ākāśād           vayuḥ/  vāyos   tejaḥ   tejaso jalaṃ  jalāt     pṛthvī    \L
+%ādyaḥ/  ādhyād ātmā/     ātmanaḥ/  ākāśaḥ/  ākāśat  yavanḥ   pavanāt tejaḥ/  tejaso--------dakāt     pṛthvī/   \N1
+%ādya/   ādhyād ātmā/     ātmana/   ākāśa/   ākāśat  yavak?   pavanāt tejaḥ/  tejaso        udakāt    pṛthvī//  \N2
+%                         ātmanaḥ   ākāśaḥ   ākāśāt  pavanaḥ  pavanāt tejaḥ   tejaḥ sa udakaṃ udakāt  pṛthvī     \U1
+%ādyaḥ// ādhyā// dātmā//  ātmanaḥ// ākāśaḥ// ākāśād  vayuḥ//  vāyos   tejaḥ// tejasor jalaṃ//   jalāt pṛthvī//  \U2
 %\om                                                                                                                                                                                        \D
 %-----------------------------
 %It is unparalelled. From of being unparalled self [arises]. Because there is a self, space [arises]. Because of space, wind [arises]. From wind light [arises]. Because of light water [arises]. From water the world [arises].
-%
-%In this regard the self has five qualities: not tangible, infinite, unexpressable, existance and unfathomable.
 %-----------------------------
-\note[type=source, labelb=344, labele=_344e, nosep]{cf. YSv (PT p. 846): ākāśāt pavano vāyos tejas tejasa eva ca | jalaṃ jalāt tathā pṛthvī eṣāṃ pañcaguṇās tathā | agocarād vayānantagrāhyam eṣāṃ tathātmanaḥ |}
+\note[type=source, labelb=344, labele=_344e, nosep]{cf. YSv (PT p. 846): ākāśāt pavano vāyos tejas tejasa eva ca | jalaṃ jalāt tathā pṛthvī eṣāṃ pañcaguṇās tathā |}
 \app{\lem[wit={ceteri}]{ādyaḥ}
   \rdg[wit={N2}]{adya}
   \rdg[wit={U1}]{\om}}/
@@ -16429,27 +16427,7 @@ prakāśasya
   \rdg[wit={U1,N2}]{udakāt}
   \rdg[wit={N1}]{°dakāt}
 }\app{\lem[wit={ceteri},alt={pṛthvī}]{\skm{t-pṛ}thvī}
-  \rdg[wit={P}]{pṛthivī}}/\\ 
-\app{\lem[wit={N2}]{tatrātmanaḥ}
-  \rdg[wit={N1,U1}]{tatra ātmanaḥ}
-  \rdg[wit={E}]{atrātmanaḥ}
-  \rdg[wit={P}]{ātrātmanaḥ}
-  \rdg[wit={B,L}]{ādyātmanaḥ}
-  \rdg[wit={U2}]{ātmanaḥ}}
-\app{\lem[wit={ceteri}]{pañcaguṇāḥ}
-  \rdg[wit={U2}]{paṃcaguṇaḥ}}/  
-\app{\lem[wit={ceteri}]{agrāhyaḥ}
-  \rdg[wit={L,N2}]{agrāhya}
-  \rdg[wit={B}]{\om}}\dd{} 
-anantaḥ\dd{}
-      \app{\lem[wit={ceteri}]{avācyaḥ}
-  \rdg[wit={N2}]{avācya}
-  \rdg[wit={U2}]{avācyā}
-  \rdg[wit={B}]{\om}}\dd{}
-      \app{\lem[wit={ceteri}]{agocaraḥ}
-  \rdg[wit={B}]{\om}}\dd{}
-      \app{\lem[wit={ceteri},alt={aprameyaś ca}]{aprameyaś\skp{-}ca}
-  \rdg[wit={B}]{\om}}\dd{}
+  \rdg[wit={P}]{pṛthivī}}/
 \linelabel{_344e}
     \end{prose}
   \end{edition}
@@ -16464,9 +16442,7 @@ The five qualities of manifestation of spirit [are]: creatorship, knowership, pr
 
 The five qualities of light [are]: consisting of parts, not consisting of parts, recognition, uniformity, tranquility.
 
-Because of that reliable knowledge is generated. It is unparalelled. From of being unparalled self [arises]. Because there is a self, space [arises]. Because of space, wind [arises]. From wind light [arises]. Because of light water [arises]. From water the world [arises].
-
-In this regard the self has five qualities: not tangible, infinite, unexpressable, existance and unfathomable.
+Because of that reliable knowledge is generated. It is unparalelled. From of being unparalled self [arises]. Because there is a self, space [arises]. Because of space, wind [arises]. From wind light [arises]. Because of light water [arises]. From water the world [arises].\footnote{Show up to get things done!}
 \flushpage
     \end{tlate}
   \end{translation}
@@ -16507,6 +16483,41 @@ In this regard the self has five qualities: not tangible, infinite, unexpressabl
     \ekddiv{type=ed}
     \begin{prose}
       \noindent
+%----------------------------
+%atrātmanaḥ pañcaguṇāḥ       agrāhyaḥ   anantaḥ   avācyaḥ  agocaraḥ   aprameyaś ca   \E %TRANSPOSED 
+%ātrātmanaḥ paṃcaguṇāḥ       agrāhyaḥ   anaṃtaḥ   avācyaḥ  agocaraḥ   aprameyaś ca   \P
+%ādyātmanaḥ paṃcaguṇāḥ/                                                             \B
+%ādyātmanaḥ paṃcaguṇāḥ       agrāhya    anaṃtaḥ   avācyaḥ  agocaraḥ   aprameyaś ca   \L
+%tatra ātmanaḥ/ paṃcaguṇāḥ/  agrāhyaḥ/  anaṃtaḥ/  avācyaḥ/ agocaraḥ/  aprameyaś ca/  \N1
+%tatrātmanaḥ paṃcaguṇāḥ//    agrāhya/   anaṃtaḥ/  avācya/  agocaraḥ/  aprameyaś ca/  \N2
+%tatra ātmanaḥ paṃcaguṇāḥ    agrāhyaḥ   anaṃtaḥ   avācyaḥ  agocaraḥ   aprameyaś ca   \U1
+%ātmanaḥ paṃcaguṇaḥ//        agrāhyaḥ// anaṃtaḥ// avācyā// agocaraḥ// aprameyaś ca// \U2
+%\om                                                                                                                                                                                        \D
+%-----------------------------
+%In this regard the self has five qualities: not tangible, infinite, unexpressable, existance and unfathomable.
+%-----------------------------
+\note[type=source, labelb=344x, labele=_344ex, nosep]{cf. YSv (PT p. 846): agocarād vayānantagrāhyam eṣāṃ tathātmanaḥ |}
+\app{\lem[wit={N2}]{tatrātmanaḥ}
+  \rdg[wit={N1,U1}]{tatra ātmanaḥ}
+  \rdg[wit={E}]{atrātmanaḥ}
+  \rdg[wit={P}]{ātrātmanaḥ}
+  \rdg[wit={B,L}]{ādyātmanaḥ}
+  \rdg[wit={U2}]{ātmanaḥ}}
+\app{\lem[wit={ceteri}]{pañcaguṇāḥ}
+  \rdg[wit={U2}]{paṃcaguṇaḥ}}/  
+\app{\lem[wit={ceteri}]{agrāhyaḥ}
+  \rdg[wit={L,N2}]{agrāhya}
+  \rdg[wit={B}]{\om}}\dd{} 
+anantaḥ\dd{}
+      \app{\lem[wit={ceteri}]{avācyaḥ}
+  \rdg[wit={N2}]{avācya}
+  \rdg[wit={U2}]{avācyā}
+  \rdg[wit={B}]{\om}}\dd{}
+      \app{\lem[wit={ceteri}]{agocaraḥ}
+  \rdg[wit={B}]{\om}}\dd{}
+      \app{\lem[wit={ceteri},alt={aprameyaś ca}]{aprameyaś\skp{-}ca}
+        \rdg[wit={B}]{\om}}\dd{}
+      \linelabel{_344ex}
 %----------------------------
 %ākāśasya pañcaguṇāḥ/  praveśaḥ niṣkramaṇaṃ   chiṃdraṃ   śabdādhāraḥ   bhrāṃtinilayatvam/    \E %TRANSPOSED
 %ākāśasya paṃcaguṇāḥ   praveśaḥ niśkrumāṇaṃ   chidraṃ    śabdadhāraḥ   bhrāṃtinilayatvaṃ     \P
@@ -16695,8 +16706,10 @@ chidraṃ\dd{}
   \end{edition}
   \begin{translation}
     \ekddiv{type=trans}
-    \begin{tlate}     
-The five qualities of space [are]: penetration, disappearance, shattered, carrier of sound, container of movement. 
+    \begin{tlate}
+      In this regard the self has five qualities: not tangible, infinite, unexpressable, existance and unfathomable.
+      
+      The five qualities of space [are]: penetration, disappearance, shattered, carrier of sound, container of movement. 
 
       The five qualities of the great wind [are]: movement, wither, passage, touch, essence of smoke.
 
@@ -16704,7 +16717,7 @@ The five qualities of space [are]: penetration, disappearance, shattered, carrie
 
       The five qualities of water [are]: flow, flabbiness, fluidness, lovely liquid tastefulness, transparent colour.
 
-      The five qualities of earth [are]: grossness, shapeliness, hardness, smelliness [and] yellowness.
+      The five qualities of earth [are]: grossness, shapeliness, hardness, smelliness [and] yellowness.\footnote{Show up to get things done!}
       \flushpage
      \end{tlate}
   \end{translation}
@@ -16962,7 +16975,7 @@ The qualities of the fire-element: hunger, thirst, sleep, exhaustion, sloth.
 
 The qualities of the wind-element are: wash off, marrow, confinement, stretch out and contraction.
 
-The qualities of the space-element are: attachment, aversion, fear, shame and confusion.
+The qualities of the space-element are: attachment, aversion, fear, shame and confusion.\footnote{Show up to get things done!}
 \flushpage
     \end{tlate}
   \end{translation}
@@ -17258,7 +17271,7 @@ The five qualities of the intellect are: differentitation, equanimity, peace, co
 \crazy{The five qualities of the mental faculty are: will, memory, attachment, aversion, opinion.}
 
 The five qualities of consciousness are: excitement, reflection, understanding, thinking, desirelessness.
-\flushpage 
+%\flushpage 
     \end{tlate}
   \end{translation}
 \end{alignment}
@@ -17890,7 +17903,7 @@ The five qualities of nature are: space, thirst, desire, striving [and] infatuat
 \begin{tlate}
 Immediately after [that], knowledge about the following things is generated: action, desire, moon, sun, and fire. The direct perception of this pentad shall be done. 
 
-Among those, the five qualities of Karma are: salvation, calamity, honour, disgrace [and] bringing about the desired result.
+Among those, the five qualities of Karma are: salvation, calamity, honour, disgrace [and] bringing about the desired result.\footnote{Show up to get things done!}
 \flushpage
     \end{tlate}
   \end{translation}
@@ -18256,7 +18269,7 @@ A seventeenth digit of the moon exists. Her name is Nivṛtti (inactivity), [and
 
 Now, the twelve digits of the sun are taught.\\
 
-1. Tāpinī (she who is heating), 2. Grāsikā (she who is seizing), 3. Ugrā (she who is fierce), 4. Ākuñcinī (she who is contracting), 5. Śoṣiṇī (she who is desiccating), 6. Prabodhinī (she who is awakening), 7. Ghasmarā (she who is voracious), 8. Ākarṣiṇī (she who is attracting), 9. Tuṣṭivarddhinī (she who is satisfying), 10. Ūrmirekhā (she who is a row of waves), 11. Kiraṇavatī (she who is radiating), 12. Prabhāvatī (she who is shining). The thirteenth digit of the sun is to be known. Her technical designation is Nijakalā (the inherent digit) and Svaprakāśā (self-luminous).
+1. Tāpinī (she who is heating), 2. Grāsikā (she who is seizing), 3. Ugrā (she who is fierce), 4. Ākuñcinī (she who is contracting), 5. Śoṣiṇī (she who is desiccating), 6. Prabodhinī (she who is awakening), 7. Ghasmarā (she who is voracious), 8. Ākarṣiṇī (she who is attracting), 9. Tuṣṭivarddhinī (she who is satisfying), 10. Ūrmirekhā (she who is a row of waves), 11. Kiraṇavatī (she who is radiating), 12. Prabhāvatī (she who is shining). The thirteenth digit of the sun is to be known. Her technical designation is Nijakalā (the inherent digit) and Svaprakāśā (self-luminous).\footnote{Show up to get things done!}
 \flushpage
 \end{tlate}
   \end{translation}
@@ -18515,12 +18528,12 @@ sa tu yogo gurusevayā prāpyate/
 \begin{tlate}
 Now, the majesty of yoga is taught.\\
 
-Because of grace of the teacher, because of studying the teaching, because of execution of good conduct, because of hearing the secret of Vedānta, because of execution of meditation, because of practicing dissolution, because of the execution of fasting, because of practising 84 āsanas, because of the generation of equanimity, because of executing equanimity, because of doing Haṭhayoga, because of holding the breath of the Iḍā- and Piṅgalā-channels, because of practicing the ten seals [like] the great-seal etc., because of [the observation of] silence, because of dwelling in the forest, because of the execution of many defilements?!, because of practicing Mantra and Yantra for a long time, because of austerities, because of giving up a lot of possession, because of frequenting places of pilgrimage, because of protection of the habit of the stages of life, because of undertaking renunciation, because of grasping the six philosophies, because of shaving the head, because of the execution of other means, the reality of yoga is not attained.
+Because of grace of the teacher, because of studying the teaching, because of execution of good conduct, because of hearing the secret of Vedānta, because of execution of meditation, because of practicing dissolution, because of the execution of fasting, because of practising 84 āsanas, because of the generation of equanimity, because of executing equanimity, because of doing Haṭhayoga, because of holding the breath of the Iḍā- and Piṅgalā-channels, because of practicing the ten seals [like] the great-seal etc., because of [the observation of] silence, because of dwelling in the forest, because of the execution of many defilements?!, because of practicing Mantra and Yantra for a long time, because of austerities, because of giving up a lot of possession, because of frequenting places of pilgrimage, because of protection of the habit of the stages of life, because of undertaking renunciation, because of grasping the six philosophies, because of shaving the head, because of the execution of other means, the reality of yoga is not attained.\footnote{Show up to get things done!}
 
 The [reality of] yoga is truly attained by frequenting the teacher.
 
 \paragraph{\uproman{52}.1} Among the firm, the truthful [and] among those worthy of the teacher's gaze, caused by [the teachers'] narration or caused by [the teachers'] glance, caused by the [mere] proximity [to the teacher] \ldots
-\flushpage 
+%\flushpage 
     \end{tlate}
   \end{translation}
 \end{alignment}
@@ -18747,7 +18760,7 @@ svātmā sthiratvam-āyāti tasmai
 
 \paragraph{\uproman{52}.4} He, who is the progenitor of absolute bliss, is known to be the true teacher. Because of a glance for just half a wink on the [teacher's] feet [or] by [just] talking about [it], \ldots
 
-\paragraph{\uproman{52}.5} \ldots the own self goes into stability, homage to that teacher, who brings all doubts to stop because of [his] advice. He is known to be a true teacher, not an unpleasant disputant.
+\paragraph{\uproman{52}.5} \ldots the own self goes into stability, homage to that teacher, who brings all doubts to stop because of [his] advice. He is known to be a true teacher, not an unpleasant disputant.\footnote{Show up to get things done!}
 \flushpage
     \end{tlate}
   \end{translation}
@@ -19340,7 +19353,7 @@ yaḥ \app{\lem[wit={ceteri}]{puruṣaḥ}
 buddhir-utpadyate/
 \end{prose}
                \ekddiv{
-                 head={[\uproman{53}. \textbf{yogaśāstrarahayam}]},
+                 head={[\uproman{53}. \textbf{yogaśāstrarahasyam}]},
                  type=section,
                  depth=2, 
                  n=LIII
@@ -19588,8 +19601,8 @@ From hearing [or] from seeing about such a person, all obstacles are destroyed. 
 \label{secretofscriptures}
 This is the secret of the scriptures of Yoga within all scriptures of Yoga. Just as the light of a lamp enters into the midst of darkness, similarly his mind enters into the teaching. For such a king, deceit does not exist. 
 
-[For him], in whose sight fear of the teacher does not arise; [for him] whose mind is pure; [for him] whose fame exists on earth; [for him] in whose mind, there is trust in the words of good individuals; [for him] who is a king always filled with bliss; [for him] by whose side numerous enchanting objects arise in front of his eyes; [for him] this secret of Yoga of such a king is the foremost secret of Yoga that has to be accomplished.
-\flushpage
+[For him], in whose sight fear of the teacher does not arise; [for him] whose mind is pure; [for him] whose fame exists on earth; [for him] in whose mind, there is trust in the words of good individuals; [for him] who is a king always filled with bliss; [for him] by whose side numerous enchanting objects arise in front of his eyes; [for him] this secret of Yoga of such a king is the foremost secret of Yoga that has to be accomplished.\footnote{Show up to get things done!}
+%\flushpage
     \end{tlate}
   \end{translation}
 \end{alignment}
@@ -19993,7 +20006,7 @@ svādā\skp{n-ma}\app{\lem[wit={ceteri},alt={manoramān}]{\skm{n-ma}noramā\skp{
     \begin{tlate}
       \paragraph{\uproman{53}.1 } Not because of love, not because of fear, not because of greed, not because of gift, not because of friendship, not because of hostility, not because of nobility, not because of service, shall yoga be taught in front of everyone.\\
       
-He, who loves it to blame others; who loves to criticise others; who is behaving badly; who does not gives [single] thing, which benefits friend and brother; who does not speak the truth and despises yoga in spirit; in whose mind compassion does not arise; who is one that has love for quarrel; attention arises for him regarding his selfish intentions; [and] disrespect arises towards the intentions of the teacher. In front of someone like this yoga is neither done nor taught.\\
+He, who loves it to blame others; who loves to criticise others; who is behaving badly; who does not gives [single] thing, which benefits friend and brother; who does not speak the truth and despises yoga in spirit; in whose mind compassion does not arise; who is one that has love for quarrel; attention arises for him regarding his selfish intentions; [and] disrespect arises towards the intentions of the teacher. In front of someone like this yoga is neither done nor taught.\footnote{Show up to get things done!}\\
 
 While hearing the sound of music etc., while seeing heart pounding forms; while smelling fragnent scent, while touching lovely and soft touch, while eating food that pleases the mind, while travelling to beautiful places, \ldots
 \flushpage
@@ -20231,8 +20244,8 @@ sarvadā\dd{} \begin{otherlanguage}{english}\uproman{53}.6\end{otherlanguage}\hs
 
 \paragraph{\uproman{53}.5} He who is always truly in permanent practice shall be equanimous towards happiness and suffering. In this way the actions of the great yogin (\textit{bhūtasya}) are free from desire.
 
-\paragraph{\uproman{53}.6} One does not become tainted by sin going amidst people and engaging in contact, he who has arisen to the awakening of reality, who is in every way equanimous.
-\flushpage 
+\paragraph{\uproman{53}.6} One does not become tainted by sin going amidst people and engaging in contact, he who has arisen to the awakening of reality, who is in every way equanimous.\footnote{Show up to get things done!}
+%\flushpage 
     \end{tlate}
   \end{translation}
 \end{alignment}
@@ -20588,7 +20601,7 @@ bhavati/
 
 Because of listening to mindblowing musical performance of charming women; because of seeing the form of a extremely beautiful women; from smelling the fragnance of camphor and musk; because of the execution of touching of very soft things, the mind that is free from passion assumes a supremely gentle state within the mental faculty.
 
-From such enjoyment; from seeing good and bad places of many countries; from speaking sweet with friends; from speaking with firmness of character to enemies; love and hatred does not arise in his mind. This person is to be known as a teacher of the supreme god. Through his own [divine] play, he speaks and moves. The mind is equanimous in both existence and non-existence. It is not even possible to express in words forcefully [how it is] when his mind is immersed in inherent bliss.
+From such enjoyment; from seeing good and bad places of many countries; from speaking sweet with friends; from speaking with firmness of character to enemies; love and hatred does not arise in his mind. This person is to be known as a teacher of the supreme god. Through his own [divine] play, he speaks and moves. The mind is equanimous in both existence and non-existence. It is not even possible to express in words forcefully [how it is] when his mind is immersed in inherent bliss.\footnote{Show up to get things done!}
 \flushpage 
     \end{tlate}
   \end{translation}
@@ -20784,7 +20797,7 @@ iti
       \noindent
 By this person the stabilization of the gaze shall be performed. The posisiton shall be made stable. The breath shall be stabilized. Such discipline has been stated by the accomplished one. When by means of mind and breath the natural bliss appears through ones own true nature, it is called natural Yoga (\textit{sahajayoga}. Within Rājayoga the name \textbf{cakravarttī} is given [to it].\\\\
 
-Thus concludes the \textit{Yogatattvabindu}, composed by Srī Ramachandra Paramahaṃsa.
+Thus concludes the \textit{Yogatattvabindu}, composed by Srī Ramachandra Paramahaṃsa.\footnote{Show up to get things done!}
 \flushpage 
     \end{tlate}
   \end{translation}
