full alignment 70% annotated

--- a/bindu.bib
+++ b/bindu.bib
@@ -1271,6 +1271,17 @@ address={Pondicherry},
     keywords={printsource},
 }
 
+@book{yogavasishta,
+    title={Yogavāsiṣṭha},
+    subtitle={The Yogavāsiṣṭha of Vālmīki with the commentary Vāsiṣṭhamahārāmayanatātparyaprakāśa}, 
+    editor={Panshikar, Vasudeva Laxman Shastri}, 
+    year={1918},
+    publisher={Tukārām Jāwajī},
+    address={Bombay}, 
+    keywords={printsource},
+}
+
+
 @book{yogakarnika,
   title={Yogakarṇikā},
   subtitle={Yogakarṇikā (An Ancient Treatise on Yoga)},
